[package]
name = "trowback"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "*", features = ["dynamic_linking"] }
# for release build
# bevy = "*"

# enable low optimizations for local code
[profile.dev]
opt-level = 1

# enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
